# SMQTK-Core

./: .gitignore  .gitlab-ci.yml  .mypy.ini  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  codecov.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  sonar-project.properties
.github/actions/python-poetry-setup/: action.yml
.github/workflows/: ci-unittests.yml  codeql.yml  publish.yml  release.yml
docs/: conf.py  faq.rst  index.rst  installation.rst  miscellaneous.rst  plugins_configuration.rst  readthedocs-reqs.txt  release_notes.rst  release_process.rst  review_process.rst  sphinx_server.py  update_release_notes.sh
docs/images/: dep_block.dot
docs/misc/: setting_up_sonarcloud.rst
docs/release_notes/: pending_release.rst  v0.15.0.rst  v0.16.0.rst  v0.17.0.rst  v0.18.0.rst  v0.18.1.rst  v0.18.2.rst  v0.19.0.rst
requirements/: ci.txt  docs.txt  test.txt
scripts/: update_release_notes.sh
smqtk_core/: __init__.py  configuration.py  dict.py  plugfigurable.py  plugin.py  wrap.py
tests/: test_configuration.py  test_merge_dict.py  test_plugfigurable.py  test_plugin.py
tests/test_plugin_dir/: module_of_more_stuff.py  module_of_stuff.py
