[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

###############################################################################
[tool.poetry]
name = "smqtk-core"
# REMEMBER: `distutils.version.*Version` types can be used to compare versions
# from strings like this.
# SMQTK prefers to use the strict numbering standard when possible.
version = "0.18.0"
description = """\
    Python toolkit for pluggable algorithms and data structures for \
    multimedia-based machine learning."""
license = "BSD-3-Clause"
authors = ["Kitware, Inc. <smqtk-developers@kitware.com>"]
readme = "README.md"
repository = "https://github.com/Kitware/SMQTK-Core"
documentation = "https://smqtk-core.readthedocs.io/"
classifiers = [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Developers',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: BSD License',
        'Operating System :: MacOS :: MacOS X',
        'Operating System :: Unix',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
python = "^3.6"
importlib-metadata = {version = "^3.7", python = "<3.8"}

[tool.poetry.dev-dependencies]
# CI
flake8 = "^3.9.0"
flake8-mutable = "^1.2.0"
mypy = "^0.812"
# Docs
# - Also see: `docs/readthedocs-reqs.txt` for use by RTD
Sphinx = "^3.5.3"
sphinx-rtd-theme = "^0.5.1"
sphinx-argparse = "^0.2.5"
sphinx-prompt = "^1.4.0"
livereload = "^2.6.3"
# Testing
coverage = "^5.5"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
# Development
ipython = "^7.16.1"
jedi = "^0.17.2"

###############################################################################
[tool.pytest.ini_options]
addopts = [
    "-lv",                  # Show local in trace-backs.
    "--doctest-modules",    # Increased verbosity.
    "--tb=long",            # Trace-back print mode.
    "--cov=smqtk_core", # Cover our package specifically
    "--cov-report=term",    # Coverage report to terminal
]
testpaths = [
    "tests",
    "smqtk_core",
]
norecursedirs = [
    "tests/test_plugin_dir"
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]
