[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

###############################################################################
[tool.poetry]
name = "smqtk-core"
# REMEMBER: `distutils.version.*Version` types can be used to compare versions
# from strings like this.
# SMQTK prefers to use the strict numbering standard when possible.
version = "0.19.0"
description = """\
    Python toolkit for pluggable algorithms and data structures for \
    multimedia-based machine learning."""
license = "BSD-3-Clause"
authors = ["Kitware, Inc. <smqtk-developers@kitware.com>"]
readme = "README.md"
repository = "https://github.com/Kitware/SMQTK-Core"
documentation = "https://smqtk-core.readthedocs.io/"
classifiers = [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Developers',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: BSD License',
        'Operating System :: MacOS :: MacOS X',
        'Operating System :: Unix',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
]

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = {version = ">=1.4", python = "<3.8"}

[tool.poetry.dev-dependencies]
# CI
flake8 = "*"
flake8-mutable = "*"
mypy = "*"
# Docs
# - Also see: `docs/readthedocs-reqs.txt` for use by RTD
Sphinx = "*"
sphinx-rtd-theme = "*"
sphinx-argparse = "*"
sphinx-prompt = "*"
livereload = "*"
# Testing
coverage = "*"
pytest = "*"
pytest-cov = "*"
# Development
ipython = "*"

###############################################################################
[tool.pytest.ini_options]
addopts = [
    "-lv",                  # Show local in trace-backs.
    "--doctest-modules",    # Increased verbosity.
    "--tb=long",            # Trace-back print mode.
    "--cov=./smqtk_core",     # Cover our package specifically
    "--cov=./tests",          # Also cover our tests for dead spots
    "--cov-report=term",    # Coverage report to terminal
    "--cov-report=xml:coverage.xml",    # for external tool reporting
]
testpaths = [
    "tests",
    "smqtk_core",
]
norecursedirs = [
    "tests/test_plugin_dir"
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]
