[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

###############################################################################
[tool.poetry]
name = "smqtk-core"
# REMEMBER: `distutils.version.*Version` types can be used to compare versions
# from strings like this.
# SMQTK prefers to use the strict numbering standard when possible.
version = "0.19.0"
description = """\
    Python toolkit for pluggable algorithms and data structures for \
    multimedia-based machine learning."""
license = "BSD-3-Clause"
authors = ["Kitware, Inc. <smqtk-developers@kitware.com>"]
readme = "README.md"
repository = "https://github.com/Kitware/SMQTK-Core"
documentation = "https://smqtk-core.readthedocs.io/"
classifiers = [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Developers',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: BSD License',
        'Operating System :: MacOS :: MacOS X',
        'Operating System :: Unix',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
]

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = {version = ">=1.4", python = "<3.8"}

[tool.poetry.dev-dependencies]
# CI
flake8 = [
    # Hinge because 6.0 minimum supported python version is 3.8.1
    { version = ">=5", python = "<3.8.1" },
    { version = ">=6", python = ">=3.8.1" }
]
flake8-mutable = ">=1.2"
mypy = ">=0.991"
# Docs
# - Also see: `docs/readthedocs-reqs.txt` for use by RTD
Sphinx = [
    # Hinge because, while sphinx >=5.3 supports python <3.8.1, it requires an
    # importlib-metadata version higher than what flake8 ^5 supports, which is
    # the version of flake8 required for python version <3.8.1.
    { version = ">=4.3.2", python = "<3.8.1" },
    { version = ">=5.3", python = ">=3.8.1"}
]
sphinx-rtd-theme = ">=1.1.1"
sphinx-argparse = ">=0.4"
sphinx-prompt = ">=1.5"
livereload = ">=2.6.3"
# Testing
coverage = ">=6.5"
pytest = ">=7.2"
pytest-cov = ">=4"
# Development
ipython = [
    { version = ">=7.34.0", python = "<3.8" },
    { version = ">=8.6.0", python = ">=3.8" }
]

###############################################################################
[tool.pytest.ini_options]
addopts = [
    "-lv",                  # Show local in trace-backs.
    "--doctest-modules",    # Increased verbosity.
    "--tb=long",            # Trace-back print mode.
    "--cov=./smqtk_core",     # Cover our package specifically
    "--cov=./tests",          # Also cover our tests for dead spots
    "--cov-report=term",    # Coverage report to terminal
    "--cov-report=xml:coverage.xml",    # for external tool reporting
]
testpaths = [
    "tests",
    "smqtk_core",
]
norecursedirs = [
    "tests/test_plugin_dir"
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]
