[metadata]
name = smqtk_core
# Reads using AST
version = attr: smqtk_core.__version__
url = https://github.com/Kitware/SMQTK-Core
author = Kitware, Inc.
author_email = smqtk-developers@kitware.com
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = BSD 3-Clause
license_file = LICENSE.txt
description = Python toolkit for pluggable algorithms and data structures for
              multimedia-based machine learning
long_description = file: README.md
platforms =
    Linux
    Mac OS-X
    Unix

[options]
packages = find:
# Required for mypy to be able to find the installed package.
# https://mypy.readthedocs.io/en/latest/installed_packages.html#installed-packages
zip_safe = False

[options.extras_require]
ci =
    flake8
    flake8-mutable
    mypy
docs =
    livereload
    Sphinx
    sphinx-argparse
    sphinx-prompt
    sphinx-rtd-theme
test =
    coverage
    pytest
    pytest-cov

[options.package_data]
smqtk_core = py.typed

[options.packages.find]
include =
    smqtk_core*
